--- a/app_server/views/mekanlar-liste.pug
+++ b/app_server/views/mekanlar-liste.pug
@@ -26,4 +26,75 @@ block content
             span.label.label-warning Kekler
             | &nbsp;
             span.label.label-warning Pastalar
-       .col-xs-12.col-sm-12
+       .col-xs-12.list-group-item
+         h4
+          a(href='/mekan/') Yemen Kahvesi
+          small &nbsp;
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star-empty
+          span.glyphicon.glyphicon-star-empty
+         span.badge.pull-right.badge-default 10km
+         p.address Centrum Garden AVM
+         p
+            span.label.label-warning Masa Oyunları
+            | &nbsp;
+            span.label.label-warning Nargile
+            | &nbsp;
+            span.label.label-warning Kahvaltı
+       .col-xs-12.list-group-item
+         h4
+          a(href='/mekan/') Simit Dümyası
+          small &nbsp;
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star-empty
+         span.badge.pull-right.badge-default 10km
+         p.address Centrum Garden AVM
+         p
+            span.label.label-warning Kahvaltı
+            | &nbsp;
+            span.label.label-warning Çay
+            | &nbsp;
+            span.label.label-warning Kahve
+       .col-xs-12.list-group-item
+         h4
+          a(href='/mekan/') Mado
+          small &nbsp;
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star
+         span.badge.pull-right.badge-default 10km
+         p.address Centrum Garden AVM
+         p
+            span.label.label-warning Dondurma
+            | &nbsp;
+            span.label.label-warning Tatlı
+            | &nbsp;
+            span.label.label-warning Çay
+       .col-xs-12.list-group-item
+         h4
+          a(href='/mekan/') MacFit
+          small &nbsp;
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star
+          span.glyphicon.glyphicon-star-empty
+         span.badge.pull-right.badge-default 10km
+         p.address Centrum Garden AVM
+         p
+            span.label.label-warning Gym
+            | &nbsp;
+            span.label.label-warning Cross Fit
+            | &nbsp;
+            span.label.label-warning Cardio
+
+
+
+      .col-xs-12.col-sm-12
